Implementacion de varias opciones para formularios con django

--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
 <html lang="ja">
+    <head>
+        <meta charset="utf-8" />
+        <title>Blog App</title>
+    </head>
 
-  <head>
-    <meta charset="utf-8">
-    <title>Blog App</title>
-  </head>
-
-  <body>
-    <p>
-      <strong>Title:</strong>
-      {{article.title}}
-    </p>
-
-    <p>
-      <strong>Content:</strong>
-      {{article.content}}
-    </p>
-    <a href="{% url 'index' %}">Back</a> |
-    <a href="{% url 'edit' article.id %}">Edit</a>
-  </body>
-
+    <body>
+        <p>
+            <strong>Title:</strong>
+            {{ article.title }}
+        </p>
+        <p>
+            <strong>Content:</strong>
+            {{ article.content }}
+        </p>
+        <p>
+            <strong>Check:</strong>
+            {{ article.check_box }}
+        </p>
+        <p>
+            <strong>Multiple Check:</strong>
+            {{ article.multiple_check_box }}
+        </p>
+        <p>
+            <strong>Pulldown:</strong>
+            {{ article.pulldown }}
+        </p>
+        <p>
+            <strong>Radio:</strong>
+            {{ article.radio }}
+        </p>
+        <a href="{% url 'index' %}">Back</a> |
+        <a href="{% url 'edit' article.id %}">Edit</a>
+    </body>
 </html>
