--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
-
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>Blog App</title>
     </head>
 
@@ -12,12 +11,19 @@
             <tr>
                 <th>Title</th>
                 <th>Content</th>
-                <th colspan="3"></th>
+                <th>Check</th>
+                <th>Multiple Check</th>
+                <th>Pulldown</th>
+                <th>Radio</th>
             </tr>
             {% for article in articles %}
             <tr>
-                <td>{{article.title}}</td>
-                <td>{{article.content}}</td>
+                <td>{{ article.title }}</td>
+                <td>{{ article.content }}</td>
+                <td>{{ article.check_box }}</td>
+                <td>{{ article.multiple_check_box }}</td>
+                <td>{{ article.pulldown }}</td>
+                <td>{{ article.radio }}</td>
                 <td><a href="{% url 'detail' article.id %}">Detail</a></td>
                 <td><a href="{% url 'edit' article.id %}">Edit</a></td>
                 <td><a href="{% url 'delete' article.id %}">Delete</a></td>
@@ -25,10 +31,8 @@
             {% endfor %}
         </table>
 
-        <br>
+        <br />
 
         <a href="{% url 'create' %}">New Blog</a>
-
     </body>
-
 </html>
